# test_fastapi

./: .editorconfig  .env.exemple  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  manage.py  pyproject.toml  setup.cfg  sonar-project.properties
.github/workflow/: lint.yml
.github/workflows/: tests.yml
app/: main.py
app/api/: routes.py
app/api/root/: endpoints.py
app/api/v1/: booking.py  resource.py  user.py
app/core/: database.py  exceptions.py  security.py  settings.py
app/models/: booking_model.py  resource_model.py  user_model.py
app/repositories/: booking_repository.py  repository.py  resource_repository.py  user_repository.py
app/schema/: booking_schema.py  resource_schema.py  user_schema.py
app/services/: booking_service.py  resource_service.py  service.py  user_service.py
migrations/: env.py  script.py.mako
migrations/versions/: 2024_11_29-10_22-create_user_table.py  2024_11_29-22_16-add_role_to_user.py  2024_12_01-14_06-create_resource_table.py  2024_12_01-20_31-create_booking_table.py  401699897a5e_create_user_table.py
src/: database.py  main.py  models.py  security.py  settings.py
src/modules/bookings/: models.py  router.py
src/modules/resources/: models.py  router.py
src/modules/users/: models.py  router.py
tests/: access_rights.py  bookings.py  conftest.py  main.py  resources.py  root_endpoints.py  users.py
