[tool.poetry]
name = "test_sc"
version = "0.1.0"
description = ""
authors = ["Florian Rodriguez <florian.rodriguez@sharingcloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 119
line-length = 119

[tool.isort]
line_length = 119

[tool.black]
line-length = 119
