[tool.poetry]
name = "test_sc"
version = "0.1.0"
description = ""
authors = ["Florian Rodriguez <florian.rodriguez@sharingcloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13.0"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pre-commit = "^4.0.1"
sqlmodel = "^0.0.22"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
pyjwt = "^2.10.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 119
line-length = 119

[tool.isort]
line_length = 119

[tool.black]
line-length = 119
